# dAImon

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .taplo.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  release-please-config.json
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs-reminder.yml  pr-title.yml  release-please.yml
assets/: capture_screenshot.py
backends/: README.md  claude.sh  codex.sh
config/: daimon.toml.example
config/hooks/: claude-hooks.json
daemons/: README.md  daemon.schema.json
daemons/datadog-log-reviewer/: README.md  daemon.local.toml.example  daemon.toml  discover.sh
daemons/dependency-reviewer/: README.md  daemon.local.toml.example  daemon.toml  discover.sh
daemons/pr-manager/: README.md  daemon.local.toml.example  daemon.toml  discover.sh
daemons/reply-to-comments/: daemon.toml  discover.sh
daemons/reply-to-pr-comments/: README.md  daemon.local.toml.example  daemon.toml  discover.sh
daemons/reply-to-story-comments/: README.md  daemon.local.toml.example  daemon.toml  discover.sh
daemons/review-prs/: README.md  daemon.local.toml.example  daemon.toml  discover.sh
daimon/: __init__.py  __main__.py  app.py  check_links.py  gate.py  gen_docs.py  init.py  sync.py
docs/: architecture.md  configuration.md  troubleshooting.md  tui-design.md  writing-a-daemon.md  writing-a-source.md
examples/: daemons.py
lib/: budget.sh  check-scope.sh  claude_trust.py  common.sh  config.py  doctor.sh  inbox.sh  init.sh  install_hooks.py  json_state.py  kill.sh  launch.sh  logging.sh  models.py  ps.sh  reap.sh  run.sh  schedule.sh  schedule_fmt.py  state-show.sh  state.sh  status.sh  throttle-detect.sh  throttle.sh  toml_emit.py  watchdog.sh
references/: codex-review.md  learning.md  output-conventions.md  skill-conventions.md
templates/: discover.sh.template
tests/: install.bats  run.sh  test_bash.sh  test_check_scope.bats  test_claude_trust.py  test_config.py  test_datadog_lib.bats  test_discover_lib.bats  test_docs.py  test_generator.py  test_init.py  test_json_state.py  test_links.py  test_models.py  test_profiles.py  test_schedule_fmt.py  test_schedule_input.py  test_schema.py  test_shortcut_lib.bats  test_skills.py  test_sync.py  test_toml_emit.py
tui/: _lib.py  daemonctl.py  detail.py  ops.py  schedule_input.py  screens.py  state.py
(+29 files in other folders)
